[package]
name = "actix-plus-auth"
version = "0.1.0"
authors = ["john01dav <john01dav@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
actix-plus-error = { path = "../actix-plus-error" }
actix-plus-utils = { path = "../actix-plus-utils" }
serde = "1.0.124"
argon2 = {version = "0.1.4", features = ["std"]}
rand = "0.8.3"
regex = "1.4.5"
once_cell = "1.7.2"
jsonwebtoken = "7.2.0"

[dev-dependencies]
actix-plus-static-files = { path = "../actix-plus-static-files" }
actix-web = { version = "3.3.2", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }