[package]
name = "actix-plus-static-files"
version = "0.1.0"
authors = ["Alexander Korolev <kilork@yandex.ru>", "David Johnson <john01dav@gmail.com>"]
categories = ["network-programming",
    "asynchronous",
    "web-programming::http-server"]
keywords = ["actix", "http", "web", "static"]
license = "Unlicense OR MIT"
edition = "2018"

[dependencies]
actix-web = { version = "3.0", default-features = false }
actix-service = { version = "1.0.6", default-features = false }
mime_guess = "2.0"
path-slash = "0.1"
include_dir = "0.6.0"
futures = "0.3.13"
derive_more = "0.99.13"
md5 = "0.7.0"