[package]
name = "actix-plus-static-files"
version = "0.1.0"
authors = ["David Johnson <john01dav@gmail.com>", "Alexander Korolev <kilork@yandex.ru>"]
categories = ["network-programming",
    "asynchronous",
    "web-programming::http-server"]
keywords = ["actix", "http", "web", "static"]
license = "Unlicense OR MIT"
edition = "2018"
description = "A library that integrates with actix-web and include_dir to cleanly package, via a macro, static resources (e.g. a frontend) with an actix-web binary, thus serving these resources from RAM at runtime and simplifying deployment by containing the entire web application in a single executable binary; Fork of actix-web-static-files by Alexander Korolev"
homepage = "https://github.com/john01dav/actix-plus"
documentation = "https://docs.rs/actix-plus-static-files"
repository = "https://github.com/john01dav/actix-plus"
readme = "README.md"

[dependencies]
actix-web = { version = "4.0.0-beta.9", default-features = false }
actix-service = { version = "2.0.0", default-features = false }
mime_guess = "2.0"
path-slash = "0.1"
include_dir = "0.6.0"
futures = "0.3.13"
derive_more = "0.99.13"
md5 = "0.7.0"