[package]
name = "actix-plus-utils"
version = "0.2.0"
authors = ["john01dav <john01dav@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A library that integrates with actix-web to provide various miscelaneous utilities that are useful in the course of actix-web development"
homepage = "https://github.com/john01dav/actix-plus"
documentation = "https://docs.rs/actix-plus-utils"
repository = "https://github.com/john01dav/actix-plus"
readme = "README.md"

[dependencies]
actix-plus-error = { path = "../actix-plus-error", version = "0.2.0" }
actix-web = "4.0.1"
unic-ucd-category = "0.9.0"
rand = "0.7.3"